<resources>
    <string name="app_name">say_az</string>
    <string name="preference_file_key" translatable="false">com.niyazi.say_az.RSA_PREF</string>
    <string name="action_skip">Keç</string>
    <string name="msg_new_and_simple">Yeni və sadə!</string>
    <string name="msg_useful">Daha rahat!</string>
    <string name="msg_efficient">Daha sərfəli!</string>
    <string name="action_asan_pass">Asan Pass</string>
    <string name="action_asan_login">asan login</string>
    <string name="action_register">Qeydiyyatdan keç</string>
    <string name="msg_enter">Daxil ol</string>
    <string name="msg_main_login_info">ASAN imza vasitəsəilə və ya asan pass ilə rahatlıqla platformaya daxil ola bilərsiniz.</string>
    <string name="msg_phone">Telefon</string>
    <string name="msg_user_id">İstifadəçi ID-si</string>
    <string name="msg_info">Məlumat</string>
    <string name="msg_asan_login">Asan login</string>
    <string name="msg_login_info">Zəhmət olmasa, asan nömrənizi və istifadəçi ID-sini daxil edin.</string>
    <string name="msg_back">Geri</string>
    <string name="msg_register">Qeydiyyat</string>
    <string name="msg_register_info">Qeydiyyatdan keçmək, zəhmət olmasa, asan nömrənizi daxil edin.</string>
    <string name="msg_asan_number">Asan nömrə</string>
    <string name="action_next">Növbəti</string>
    <string name="msg_upload_img">Şəkil yüklə</string>
    <string name="msg_name">Ad</string>
    <string name="msg_surname">Soyad</string>
    <string name="msg_fin">Fin</string>
    <string name="msg_activity_type">Fəaliyyət növü</string>
    <string name="msg_create_bank_account">Bank hesabı aç</string>
    <string name="msg_create_account_info">Bu bölmədə istənilən bankda hesab açaraq kart sifarişi göndərə bilərsiniz.</string>
    <string name="msg_bank_choice">Bank seç</string>
    <string name="action_send">Göndər</string>
    <string name="msg_bank_name">Bank adı</string>
    <string name="title_congratulation">Təbriklər</string>
    <string name="action_ok">OK</string>
    <string name="error_title">Xəta!</string>
    <string name="error_user_credential">Yanlış telefon nömrəsi yaxud istifadəçi idsi</string>
    <string name="action_add">Əlavə et</string>
    <string name="msg_account_add_info">Gəlirlərinizi görmək üçün bank hesabı əlavə edin.</string>
    <string name="msg_profile_info">Profil məlumatları</string>
    <string name="msg_designer">Designer</string>
    <string name="msg_tax_info">Vergi hesabatlarım</string>
    <string name="msg_bank_account">Bank hesablarım</string>
    <string name="msg_send_mail">Vergilər Nazirliyinə mail yaz</string>
    <string name="title_settings">Tənzimləmələr</string>
    <string name="msg_language">Dil</string>
    <string name="msg_mode">Mode</string>
    <string name="msg_info_about_app">Tətbiq haqqında məlumat</string>
    <string name="msg_delete_profile">Profili sil</string>
    <string name="action_choose">Seç</string>
    <string name="action_cancel">Ləğv et</string>
    <string name="msg_az_lang">Azərbaycanca</string>
    <string name="msg_en_lang">İngiliscə</string>
    <string name="msg_ru_lang">Rusca</string>
    <string name="msg_mode_night">Gecə</string>
    <string name="msg_mode_default">Default</string>
    <string name="msg_card_number">Kartın nömrəsi</string>
    <string name="msg_end_date">Bitmə tarixi</string>
    <string name="msg_cvc">CVCCVV</string>
    <string name="title_add_account">Hesab əlavə et</string>
    <string name="msg_dashboard">Dashboard</string>
    <string name="msg_yearly">İllik</string>
    <string name="msg_mode_light">İşıqlı</string>
    <string name="msg_receipts_from_others">Gələnlər</string>
    <string name="msg_receipts_send_by_me">Göndərdiklərim</string>
    <string name="msg_search">Axtar…</string>
    <string name="msg_invoices">Qaimələr</string>
    <string name="msg_send_invoice">Qaimə göndər</string>
    <string name="msg_invoice_type">Qaimənin növü</string>
    <string name="msg_voen">VÖEN</string>
    <string name="msg_worth">Məbləğ</string>
    <string name="msg_period">Period</string>
    <string name="msg_with_voen">VÖEN ilə</string>
    <string name="msg_without_voen">VÖEN-siz</string>
    <string name="title_report">Hesabat</string>
    <string name="msg_report_type">Hesabat növü</string>
    <string name="msg_year">İl</string>
    <string name="msg_term">Rüb</string>
    <string name="mag_term_income">Dövr ərzində gəlir</string>
    <string name="msg_tax_value">Vergi məbləği</string>
    <string name="msg_activities">Fəaliyyət</string>
    <string name="msg_income">Gəlirlər</string>
    <string name="msg_expenses">Xərclər</string>
    <string name="msg_january">Yanvar</string>
    <string name="msg_february">Fevral</string>
    <string name="msg_march">Mart</string>
    <string name="msg_april">Aprel</string>
    <string name="msg_may">May</string>
    <string name="msg_june">İyun</string>
    <string name="msg_july">İyul</string>
    <string name="msg_august">Avqust</string>
    <string name="msg_september">Sentyabr</string>
    <string name="msg_october">Oktyabr</string>
    <string name="msg_november">Noyabr</string>
    <string name="msg_december">Dekabr</string>
    <string name="msg_term_tax_report">Cari vergi arayışı</string>
    <string name="msg_unique_declaration">Vahid bəyannamə</string>
    <string name="msg_income_tax">Gəlir vergisi bəyanaməsi</string>
    <string name="msg_yes_activities">Fəaliyyət olub</string>
    <string name="msg_no_activities">Fəaliyyət olmayıb</string>
    <string name="title_notifications">Bildirişlər</string>
    <string name="msg_monthly">Aylıq</string>
    <string name="error_empty_field">Zəhmət olmasa xananı doldurun</string>
    <string name="error_card_number">Zəhmət olmasa düzgün card nömrəsi daxil edin</string>
    <string name="error_cvc">Zəhmət olmasa düzgün cvc daxil edin</string>
    <string name="action_add_new_one">Yenisini əlavə et</string>
    <string name="title_my_bank_accounts">Bank hesablarım</string>
    <string name="msg_about_app">App haqqında</string>
    <string name="msg_no_application">Tətbiq tapılmadı</string>
    <string name="msg_logout">Çıxış</string>

    <string-array name="language_list">
        <item>@string/msg_en_lang</item>
        <item>@string/msg_az_lang</item>
        <item>@string/msg_ru_lang</item>
    </string-array>

    <string-array name="mode_list">
        <item>@string/msg_mode_default</item>
        <item>@string/msg_mode_light</item>
        <item>@string/msg_mode_night</item>
    </string-array>

    <string-array name="receipts_list">
        <item>@string/msg_receipts_from_others</item>
        <item>@string/msg_receipts_send_by_me</item>
    </string-array>

    <string-array name="voen_list">
        <item>@string/msg_with_voen</item>
        <item>@string/msg_without_voen</item>
    </string-array>

    <string-array name="month_I_term">
        <item>@string/msg_january</item>
        <item>@string/msg_february</item>
        <item>@string/msg_march</item>
    </string-array>

    <string-array name="month_II_term">
        <item>@string/msg_april</item>
        <item>@string/msg_may</item>
        <item>@string/msg_june</item>
    </string-array>

    <string-array name="month_III_term">
        <item>@string/msg_july</item>
        <item>@string/msg_august</item>
        <item>@string/msg_september</item>
    </string-array>

    <string-array name="month_IV_term">
        <item>@string/msg_october</item>
        <item>@string/msg_december</item>
        <item>@string/msg_january</item>
    </string-array>

    <string-array name="report_type_list">
        <item>@string/msg_term_tax_report</item>
        <item>@string/msg_unique_declaration</item>
        <item>@string/msg_income_tax</item>
    </string-array>

    <string-array name="activities_list">
        <item>@string/msg_no_activities</item>
        <item>@string/msg_yes_activities</item>
    </string-array>
    <string-array name="term_list">
        <item>@string/msg_yearly</item>
        <item>@string/msg_monthly</item>
    </string-array>
    <string name="title_reports">Hesabatlar</string>
</resources>