<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/motion_scene_profile"
    tools:context=".ui.fragment.settings.SettingsFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize" />

    <TextView
        android:id="@+id/textViewFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="Ülviyyə İmamova"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="1234567890434"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewFullName"
        app:layout_constraintStart_toStartOf="@+id/textViewFullName"
        app:layout_constraintTop_toBottomOf="@+id/textViewFullName" />

    <ImageView
        android:id="@+id/imageViewCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@id/imageViewProfile"
        app:layout_constraintEnd_toEndOf="@id/imageViewProfile"
        app:layout_constraintStart_toEndOf="@id/imageViewProfile"
        app:layout_constraintTop_toTopOf="@id/imageViewProfile"
        app:layout_constraintVertical_bias="0.8" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollViewItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewId">

        <LinearLayout
            android:id="@+id/constraintLayoutItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="48dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_profile_info"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp" />

            <com.niyazi.say_az.ui.custom_view.TextViewShadow
                android:id="@+id/textViewShadowDesigner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:icon="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:startText="@string/msg_designer" />

            <com.niyazi.say_az.ui.custom_view.TextViewShadow
                android:id="@+id/textViewShadowVoen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_person"
                android:layout_marginTop="16dp"
                app:endText="@string/msg_voen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:startText="68618654548246" />

            <com.niyazi.say_az.ui.custom_view.TextViewShadow
                android:id="@+id/textViewShadowFin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_person"
                android:layout_marginTop="16dp"
                app:endText="@string/msg_fin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:startText="6CBZP4H" />

            <com.niyazi.say_az.ui.custom_view.TextViewShadow
                android:id="@+id/textViewShadowBankAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:icon="@drawable/ic_card_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:startText="@string/msg_bank_account" />

            <com.niyazi.say_az.ui.custom_view.TextViewShadow
                android:id="@+id/textViewShadowBankSendMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:icon="@drawable/ic_send"
                app:layout_constraintBottom_toBottomOf="parent"
                app:startText="@string/msg_send_mail" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title_settings"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp" />

            <com.niyazi.say_az.ui.custom_view.TextViewShadow
                android:id="@+id/textViewShadowLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:endText="Azərbaycanca"
                app:icon="@drawable/ic_translate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:startText="@string/msg_language" />

            <com.niyazi.say_az.ui.custom_view.TextViewShadow
                android:id="@+id/textViewShadowMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:endText="Gecə"
                app:icon="@drawable/ic_moon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:startText="@string/msg_mode" />

            <com.niyazi.say_az.ui.custom_view.TextViewShadow
                android:id="@+id/textViewShadowInfoAboutApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:icon="@drawable/ic_info"
                app:layout_constraintBottom_toBottomOf="parent"
                app:startText="@string/msg_info_about_app" />

            <com.niyazi.say_az.ui.custom_view.TextViewShadow
                android:id="@+id/textViewShadowDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:icon="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:startText="@string/msg_delete_profile" />

            <com.niyazi.say_az.ui.custom_view.TextViewShadow
                android:id="@+id/textViewShadowLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:icon="@drawable/ic_logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:startText="@string/msg_logout" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>