<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragment.register.RegisterFragment">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/msg_register"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16000003" />

        <TextView
            android:id="@+id/textViewBody"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/msg_register_info"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
            app:layout_constraintStart_toStartOf="@+id/textViewTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAsanNumber"
            style="@style/Theme.TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            app:endIconDrawable="@drawable/ic_phone"
            app:layout_constraintEnd_toEndOf="@+id/textViewBody"
            app:layout_constraintStart_toStartOf="@+id/textViewTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewBody">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_asan_number"
                android:imeOptions="actionDone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNext"
            style="@style/Theme.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/action_next"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutAsanNumber"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutAsanNumber"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAsanNumber"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewInfo"
            style="@style/NextIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/msg_info"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonNext"
            app:layout_constraintStart_toStartOf="@+id/buttonNext"
            app:layout_constraintTop_toBottomOf="@+id/buttonNext"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
